Antlr Program/BasForCCal/src/basforccal/BasForCCalParser.java
// $ANTLR 3.4 C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g 2020-04-23 09:01:50
 
    package basforccal;
    import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class BasForCCalParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ESC_SEQ", "EXPONENT", "FLOAT", "HEX_DIGIT", "ID", "INT", "Number", "OCTAL_ESC", "STRING", "UNICODE_ESC", "WS", "'%'", "'('", "'()'", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'BEGIN'", "'CALL'", "'CHAR'", "'DO'", "'END'", "'ENDDO'", "'ENDIF'", "'ENDLOOP'", "'FLOAT'", "'FOR'", "'FUNCTION'", "'IF'", "'INT'", "'LOOP'", "'PROCEDURE'", "'PROGRAM'", "'THEN'", "'TO'", "'WHILE'"
    };

    public static final int EOF=-1;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int CHAR=4;
    public static final int COMMENT=5;
    public static final int ESC_SEQ=6;
    public static final int EXPONENT=7;
    public static final int FLOAT=8;
    public static final int HEX_DIGIT=9;
    public static final int ID=10;
    public static final int INT=11;
    public static final int Number=12;
    public static final int OCTAL_ESC=13;
    public static final int STRING=14;
    public static final int UNICODE_ESC=15;
    public static final int WS=16;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public BasForCCalParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public BasForCCalParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return BasForCCalParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g"; }


    HashMap memory =new HashMap();
    HashMap m=new HashMap();
    	String type;
    	String programName;
    	void checkName(String endName){
    		if(programName.equals(endName)==false){
    			System.err.println("Names doesn't match!");
    		}
    		else{
    			System.out.println("End program "+endName);
    		}	
    	}



    // $ANTLR start "program"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:26:1: program : start programbody end procedureprogram ;
    public final void program() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:26:8: ( start programbody end procedureprogram )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:26:10: start programbody end procedureprogram
            {
            pushFollow(FOLLOW_start_in_program27);
            start();

            state._fsp--;


            pushFollow(FOLLOW_programbody_in_program29);
            programbody();

            state._fsp--;


            pushFollow(FOLLOW_end_in_program31);
            end();

            state._fsp--;


            pushFollow(FOLLOW_procedureprogram_in_program33);
            procedureprogram();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "program"



    // $ANTLR start "start"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:27:1: start : 'PROGRAM' ID ;
    public final void start() throws RecognitionException {
        Token ID1=null;

        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:27:6: ( 'PROGRAM' ID )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:27:7: 'PROGRAM' ID
            {
            match(input,48,FOLLOW_48_in_start38); 

            ID1=(Token)match(input,ID,FOLLOW_ID_in_start40); 

            programName=(ID1!=null?ID1.getText():null); System.out.println("checking program " + (ID1!=null?ID1.getText():null));

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "start"



    // $ANTLR start "programbody"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:30:1: programbody : ( statement )* prog ;
    public final void programbody() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:30:12: ( ( statement )* prog )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:30:14: ( statement )* prog
            {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:30:14: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==35||LA1_0==41||LA1_0==45) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:30:14: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_programbody50);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            pushFollow(FOLLOW_prog_in_programbody53);
            prog();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "programbody"



    // $ANTLR start "statement"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:31:1: statement : ( i | c | f );
    public final void statement() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:32:2: ( i | c | f )
            int alt2=3;
            switch ( input.LA(1) ) {
            case 45:
                {
                alt2=1;
                }
                break;
            case 35:
                {
                alt2=2;
                }
                break;
            case 41:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:32:4: i
                    {
                    pushFollow(FOLLOW_i_in_statement61);
                    i();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:32:7: c
                    {
                    pushFollow(FOLLOW_c_in_statement64);
                    c();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:32:10: f
                    {
                    pushFollow(FOLLOW_f_in_statement67);
                    f();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "statement"



    // $ANTLR start "i"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:34:1: i : 'INT' idlist ;
    public final void i() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:34:2: ( 'INT' idlist )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:34:3: 'INT' idlist
            {
            match(input,45,FOLLOW_45_in_i73); 

            pushFollow(FOLLOW_idlist_in_i75);
            idlist();

            state._fsp--;


            type="INT";

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "i"



    // $ANTLR start "c"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:35:1: c : 'CHAR' idlist ;
    public final void c() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:35:2: ( 'CHAR' idlist )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:35:3: 'CHAR' idlist
            {
            match(input,35,FOLLOW_35_in_c81); 

            pushFollow(FOLLOW_idlist_in_c83);
            idlist();

            state._fsp--;


            type="CHAR";

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "c"



    // $ANTLR start "f"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:36:1: f : 'FLOAT' idlist ;
    public final void f() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:36:2: ( 'FLOAT' idlist )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:36:3: 'FLOAT' idlist
            {
            match(input,41,FOLLOW_41_in_f90); 

            pushFollow(FOLLOW_idlist_in_f92);
            idlist();

            state._fsp--;


            type="FLOAT";

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "f"



    // $ANTLR start "idlist"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:37:1: idlist : getid ( ',' getid )* ;
    public final void idlist() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:37:7: ( getid ( ',' getid )* )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:37:8: getid ( ',' getid )*
            {
            pushFollow(FOLLOW_getid_in_idlist100);
            getid();

            state._fsp--;


            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:37:13: ( ',' getid )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==23) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:37:14: ',' getid
            	    {
            	    match(input,23,FOLLOW_23_in_idlist102); 

            	    pushFollow(FOLLOW_getid_in_idlist103);
            	    getid();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "idlist"



    // $ANTLR start "getid"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:38:1: getid : ID ;
    public final void getid() throws RecognitionException {
        Token ID2=null;

        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:38:6: ( ID )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:38:7: ID
            {
            ID2=(Token)match(input,ID,FOLLOW_ID_in_getid110); 

             if(memory.containsKey((ID2!=null?ID2.getText():null)))
            		    System.err.println("Error:"+(ID2!=null?ID2.getText():null)+"already defined");
            		    else
            		    	memory.put((ID2!=null?ID2.getText():null),type);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "getid"



    // $ANTLR start "prog"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:46:1: prog : ( stat )* ;
    public final void prog() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:46:5: ( ( stat )* )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:46:6: ( stat )*
            {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:46:6: ( stat )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==CHAR||(LA4_0 >= ID && LA4_0 <= Number)||LA4_0==18||LA4_0==34||LA4_0==42||LA4_0==44||LA4_0==51) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:46:6: stat
            	    {
            	    pushFollow(FOLLOW_stat_in_prog141);
            	    stat();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "prog"



    // $ANTLR start "stat"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:47:1: stat : ( expression | if_statement | while_loop | for_loop | call );
    public final void stat() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:47:5: ( expression | if_statement | while_loop | for_loop | call )
            int alt5=5;
            switch ( input.LA(1) ) {
            case CHAR:
            case ID:
            case INT:
            case Number:
            case 18:
                {
                alt5=1;
                }
                break;
            case 44:
                {
                alt5=2;
                }
                break;
            case 51:
                {
                alt5=3;
                }
                break;
            case 42:
                {
                alt5=4;
                }
                break;
            case 34:
                {
                alt5=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:47:7: expression
                    {
                    pushFollow(FOLLOW_expression_in_stat148);
                    expression();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:47:20: if_statement
                    {
                    pushFollow(FOLLOW_if_statement_in_stat152);
                    if_statement();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:47:35: while_loop
                    {
                    pushFollow(FOLLOW_while_loop_in_stat156);
                    while_loop();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:47:48: for_loop
                    {
                    pushFollow(FOLLOW_for_loop_in_stat160);
                    for_loop();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:47:59: call
                    {
                    pushFollow(FOLLOW_call_in_stat164);
                    call();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "stat"



    // $ANTLR start "expression"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:48:1: expression : term ( ( '+' | '-' | '*' | '/' | '%' | '<' | '<=' | '>' | '>=' | '<>' | '=' ) term )* ;
    public final void expression() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:48:11: ( term ( ( '+' | '-' | '*' | '/' | '%' | '<' | '<=' | '>' | '>=' | '<>' | '=' ) term )* )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:48:12: term ( ( '+' | '-' | '*' | '/' | '%' | '<' | '<=' | '>' | '>=' | '<>' | '=' ) term )*
            {
            pushFollow(FOLLOW_term_in_expression170);
            term();

            state._fsp--;


            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:48:17: ( ( '+' | '-' | '*' | '/' | '%' | '<' | '<=' | '>' | '>=' | '<>' | '=' ) term )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==17||(LA6_0 >= 21 && LA6_0 <= 22)||LA6_0==24||(LA6_0 >= 26 && LA6_0 <= 32)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:48:18: ( '+' | '-' | '*' | '/' | '%' | '<' | '<=' | '>' | '>=' | '<>' | '=' ) term
            	    {
            	    if ( input.LA(1)==17||(input.LA(1) >= 21 && input.LA(1) <= 22)||input.LA(1)==24||(input.LA(1) >= 26 && input.LA(1) <= 32) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_term_in_expression211);
            	    term();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "expression"



    // $ANTLR start "term"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:49:1: term : ( Number | CHAR | INT | '(' expression ')' | ID | ID '()' | ID '(' fidlist ')' );
    public final void term() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:49:5: ( Number | CHAR | INT | '(' expression ')' | ID | ID '()' | ID '(' fidlist ')' )
            int alt7=7;
            switch ( input.LA(1) ) {
            case Number:
                {
                alt7=1;
                }
                break;
            case CHAR:
                {
                alt7=2;
                }
                break;
            case INT:
                {
                alt7=3;
                }
                break;
            case 18:
                {
                alt7=4;
                }
                break;
            case ID:
                {
                switch ( input.LA(2) ) {
                case 19:
                    {
                    alt7=6;
                    }
                    break;
                case 18:
                    {
                    switch ( input.LA(3) ) {
                    case ID:
                        {
                        switch ( input.LA(4) ) {
                        case 19:
                            {
                            int LA7_12 = input.LA(5);

                            if ( (LA7_12==23) ) {
                                alt7=7;
                            }
                            else if ( (LA7_12==17||(LA7_12 >= 20 && LA7_12 <= 22)||LA7_12==24||(LA7_12 >= 26 && LA7_12 <= 32)) ) {
                                alt7=5;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 7, 12, input);

                                throw nvae;

                            }
                            }
                            break;
                        case 18:
                            {
                            alt7=5;
                            }
                            break;
                        case 23:
                            {
                            alt7=7;
                            }
                            break;
                        case 17:
                        case 20:
                        case 21:
                        case 22:
                        case 24:
                        case 26:
                        case 27:
                        case 28:
                        case 29:
                        case 30:
                        case 31:
                        case 32:
                            {
                            alt7=5;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 7, 9, input);

                            throw nvae;

                        }

                        }
                        break;
                    case INT:
                        {
                        int LA7_10 = input.LA(4);

                        if ( (LA7_10==23) ) {
                            alt7=7;
                        }
                        else if ( (LA7_10==17||(LA7_10 >= 20 && LA7_10 <= 22)||LA7_10==24||(LA7_10 >= 26 && LA7_10 <= 32)) ) {
                            alt7=5;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 7, 10, input);

                            throw nvae;

                        }
                        }
                        break;
                    case CHAR:
                        {
                        int LA7_11 = input.LA(4);

                        if ( (LA7_11==23) ) {
                            alt7=7;
                        }
                        else if ( (LA7_11==17||(LA7_11 >= 20 && LA7_11 <= 22)||LA7_11==24||(LA7_11 >= 26 && LA7_11 <= 32)) ) {
                            alt7=5;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 7, 11, input);

                            throw nvae;

                        }
                        }
                        break;
                    case Number:
                    case 18:
                        {
                        alt7=5;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 7, input);

                        throw nvae;

                    }

                    }
                    break;
                case CHAR:
                case ID:
                case INT:
                case Number:
                case 17:
                case 20:
                case 21:
                case 22:
                case 24:
                case 26:
                case 27:
                case 28:
                case 29:
                case 30:
                case 31:
                case 32:
                case 34:
                case 36:
                case 37:
                case 38:
                case 39:
                case 40:
                case 42:
                case 44:
                case 46:
                case 49:
                case 50:
                case 51:
                    {
                    alt7=5;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 5, input);

                    throw nvae;

                }

                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }

            switch (alt7) {
                case 1 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:49:6: Number
                    {
                    match(input,Number,FOLLOW_Number_in_term218); 

                    }
                    break;
                case 2 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:49:15: CHAR
                    {
                    match(input,CHAR,FOLLOW_CHAR_in_term222); 

                    }
                    break;
                case 3 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:49:22: INT
                    {
                    match(input,INT,FOLLOW_INT_in_term226); 

                    }
                    break;
                case 4 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:49:28: '(' expression ')'
                    {
                    match(input,18,FOLLOW_18_in_term230); 

                    pushFollow(FOLLOW_expression_in_term232);
                    expression();

                    state._fsp--;


                    match(input,20,FOLLOW_20_in_term234); 

                    }
                    break;
                case 5 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:49:48: ID
                    {
                    match(input,ID,FOLLOW_ID_in_term237); 

                    }
                    break;
                case 6 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:49:53: ID '()'
                    {
                    match(input,ID,FOLLOW_ID_in_term241); 

                    match(input,19,FOLLOW_19_in_term242); 

                    }
                    break;
                case 7 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:49:62: ID '(' fidlist ')'
                    {
                    match(input,ID,FOLLOW_ID_in_term246); 

                    match(input,18,FOLLOW_18_in_term247); 

                    pushFollow(FOLLOW_fidlist_in_term248);
                    fidlist();

                    state._fsp--;


                    match(input,20,FOLLOW_20_in_term249); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "term"



    // $ANTLR start "fidlist"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:51:1: fidlist : name ( ',' name )* ;
    public final void fidlist() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:51:9: ( name ( ',' name )* )
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:51:11: name ( ',' name )*
            {
            pushFollow(FOLLOW_name_in_fidlist257);
            name();

            state._fsp--;


            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:51:15: ( ',' name )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==23) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:51:16: ',' name
            	    {
            	    match(input,23,FOLLOW_23_in_fidlist259); 

            	    pushFollow(FOLLOW_name_in_fidlist260);
            	    name();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "fidlist"



    // $ANTLR start "name"
    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:52:1: name : ( ID | INT | CHAR | ID '()' );
    public final void name() throws RecognitionException {
        try {
            // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:52:6: ( ID | INT | CHAR | ID '()' )
            int alt9=4;
            switch ( input.LA(1) ) {
            case ID:
                {
                int LA9_1 = input.LA(2);

                if ( (LA9_1==19) ) {
                    alt9=4;
                }
                else if ( (LA9_1==20||LA9_1==23) ) {
                    alt9=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 1, input);

                    throw nvae;

                }
                }
                break;
            case INT:
                {
                alt9=2;
                }
                break;
            case CHAR:
                {
                alt9=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;

            }

            switch (alt9) {
                case 1 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:52:8: ID
                    {
                    match(input,ID,FOLLOW_ID_in_name269); 

                    }
                    break;
                case 2 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:52:13: INT
                    {
                    match(input,INT,FOLLOW_INT_in_name273); 

                    }
                    break;
                case 3 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:52:18: CHAR
                    {
                    match(input,CHAR,FOLLOW_CHAR_in_name276); 

                    }
                    break;
                case 4 :
                    // C:\\Users\\lvaro\\OneDrive\\Documents\\BasForCCal.g:52:23: ID '()'
                    {
                    match(input,ID,FOLLOW_ID_in_name278); 

                    match(input,19,FOLLOW_19_in_name279); 

                    }
                    break;
